--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
         "doctrine/doctrine-bundle": "^2.10",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.16",
+        "nelmio/api-doc-bundle": "^4.11",
+        "nelmio/cors-bundle": "^2.3",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.24",
         "symfony/asset": "6.3.*",
@@ -40,7 +42,7 @@
         "symfony/yaml": "6.3.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
-        "doctrine/annotations": "^1.0"
+        "ext-http": "*"
     },
     "config": {
         "allow-plugins": {
