--- a/config/services.yaml
+++ b/config/services.yaml
@@ -19,6 +19,12 @@ services:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
+    app.service.company_service:
+        class: App\Service\CompanyService
+        public: true
 
+    app.service.charging_station_service:
+        class: App\Service\ChargingStationService
+        public: true
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
